# rnote

./: .gitattributes  .gitignore  Cargo.toml  README.md  index.html
css/: NAPI.css  NAPI.css.map  NAPI.scss  login.css  login.css.map  login.scss
pronote-api/: README.md  index.js  package.json
pronote-api/src/: pronote.js
pronote-api/src/cas/: iledefrance.js
src/: config.rs  data.rs  lib.rs  pronote_out.rs
src/config/: subjects-colors delfour.yml  subjects-colors laurent.yml  subjects-colors lemerrer 2.yml  subjects-colors lemerrer.yml  subjects-colors.yml  subjects-names.yml
src/views/: connect.rs  connexion.rs  mod.rs
src/views/home/: edt.rs  home.rs  homework.rs  mod.rs
