[package]
version = "0.1.0"
name = "rnote"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["ccgauche <laurent.gaucheron@gmail.com>"]
description = "A pronote client written in Rust"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.12"

[dependencies]
seed = { git = "https://github.com/seed-rs/seed", rev = "b25cf59" }
js-sys = "*"
lazy_static = "*"
futures = "^0.3.4"
serde = { version = "^1.0.85", features = ['derive'] }
serde_json = "*"
web-sys = {version = "*",features = ["CssStyleDeclaration"]}

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
